# aula18_bootcamp

./: .gitignore  README.md  exemplo_00.py  pokemon.db  pyproject.toml  requirements.txt
src/: controller.py  main.py  models.py
