[project]
name = "aula18-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "VanthuirMaia",email = "vanmaiasf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pydentic (>=0.0.1.dev3,<0.0.2)",
    "pydantic (>=2.11.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
